@@ -1,4 +1,7 @@
 2011-04-01 lucas
+* Added new tests to check Purchase Trade Condition and Sale Trande Condition.
+
+2011-04-01 lucas
 * Renamed  module_permission_access.ods to standard_module_permission_access.ods
 
 2011-04-01 lucas
